@@ -73,6 +73,8 @@ Changes log
    This will greatly facilitate the usage of the API in IoC containers like Spring.
  - Renamed "URIResolver" property to "uriResolver" in TransformRepresentation.
  - Renamed "*Attribute" properties to "*Parameter" in TunnelService.
+ - If Resource.getRepresentation(Variant) returns 'null', the Resource.handleGet() method now
+   returns a NOT_FOUND (404) status. Suggested by John D. Mitchell. 
  
 [Misc]
  - Removed AsyncWeb connector, to be replaced by a custom MINA based one.
